--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -45,6 +49,22 @@ h4 {
     display: inline-block;
 }
 
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
 /*--------------------------------------------Heading*/
 
 header {
@@ -159,7 +179,7 @@ footer {
 
 }
 
-.cv-pdf i: hover {
+.cv-pdf i:hover {
     color: #e84610;
 }
 
@@ -168,10 +188,10 @@ footer {
 
 }
 
-.social-links li a li {
+.social-links li a i {
     width: 32px;
     height: 32px;
-    padding: 12px, 0;
+    padding: 12px 0;
     border-radius: 50%;
     font-size: 13px;
     line-height: 7px;
@@ -184,6 +204,6 @@ footer {
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a li:hover {
+.social-links li a i:hover {
     background-color: #e84610;
 }
